argocd/app-apps/tavern1/templates/st-test-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: st-test-forward-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-sillytavern-outpost.apps.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://st-test.home.ryougi.ca/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,Remote-User"
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $authentik_username $upstream_http_x_authentik_username;
      auth_request_set $authentik_groups $upstream_http_x_authentik_groups;
      auth_request_set $authentik_email $upstream_http_x_authentik_email;
      auth_request_set $authentik_name $upstream_http_x_authentik_name;
      auth_request_set $authentik_uid $upstream_http_x_authentik_uid;
      auth_request_set $remote_user $upstream_http_remote_user;
      proxy_set_header X-authentik-username $authentik_username;
      proxy_set_header X-authentik-groups $authentik_groups;
      proxy_set_header X-authentik-email $authentik_email;
      proxy_set_header X-authentik-name $authentik_name;
      proxy_set_header X-authentik-uid $authentik_uid;
      proxy_set_header Remote-User $remote_user;
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  tls:
    - secretName: st-test-home-ryougi-ca-tls
      hosts:
        - st-test.home.ryougi.ca
  rules:
  - host: st-test.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tavern-kumori-service
            port:
              number: 80
